--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "mcp-client",
-  "version": "1.0.0",
+  "name": "mcp-client-repl",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
-    "start": "tsx src/mcp-client-repl.ts"
+    "start": "tsx src/mcp-client-repl.ts",
+    "minimal": "tsx src/mcp-client-minimal.ts"
   },
   "keywords": [],
   "author": "",
@@ -11,7 +12,6 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.2",
-    "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "readline": "^1.3.0"
   },
